tmp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starwars.com
spec:
  rules:
  - host: starwars.com
    http:
      paths:
      - backend:
          service:
            name: starwars-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
